# TrackMeCore

./: .env.examle  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  app.py  configuration_example.json  pyproject.toml  run.sh  setup.cfg  tracking_configuration1.json
.github/workflows/: github-actions-demo.yml  test-and-release-image.yml
files/: 6_2022-01-31_tracking.csv
tests/: conftest.py
tests/api/: test_analysis.py  test_meta.py  test_tracking.py  test_user.py
trackme/: __init__.py  config.py  storage.py
trackme/migration/: env.py
trackme/migration/versions/: 066da6651017_rename_tracking_attributes_column.py  1cf56fadd556_binary_features.py  3037e0e77289_clean_experiments.py  4aa4bc5a49c2_mental_balanc_tags.py  578c234df99c_experiments.py  637cd44b745f_add_topic_and_attribute.py  72758d0c5410_attributes_constraint_and_icons.py  77b10804413c_tracking_always_depedns_on_user.py  7c4f5d21d1f2_one_to_one_tracking_attribute.py  b6fc51b5d4ab_change_attribute_user_behaviour.py  bbf0cdb91bf2_cascade_update.py  c7a39b442939_attributes_visibility.py  d4f3409c749d_add_tracking_entry.py  de7bab7ec5ac_add_users.py  ded957c74c6c_attributes_depend_on_users.py  e3e8aae9d6f6_fast_track.py  f6463442b828_user_deletes_tracking.py  fd48e757c490_attributes_to_entrey_manyrelationship.py
trackme/tracking/analysis/: __init__.py  basic_statistics.py
trackme/tracking/analytics/: __init__.py  multifactor_analysis.py  simple_analysis.py
trackme/tracking/api/: __init__.py  analysis.py  analytics.py  meta.py  tracking.py  user.py
trackme/tracking/crud/: __init__.py  data_collection.py  meta.py  meta_validation.py  tracking.py  tracking_validation.py  user.py  user_validation.py
trackme/tracking/helpers/: hashing.py
trackme/tracking/models/: __init__.py  categories.py  entries.py  meta.py  seeder.py  tracking.py  users.py
trackme/tracking/types/: __init__.py  analytics.py  data_type.py  meta.py  tracking.py  user.py
