[tool.poetry]
name = "TrackMeCore"
version = "0.1.0"
description = "base functionality for personal data collection and initial analysis"
authors = ["alisa <alisa.dammer@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
SQLAlchemy = "^1.4.5"
alembic = "^1.5.8"
pydantic = "^1.8.1"
python-dotenv = "^0.17.0"
asyncpg = "^0.22.0"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
