[tool.poetry]
name = "TrackMeCore"
version = "0.1.0"
description = "base functionality for personal data collection and initial analysis"
authors = ["alisa <alisa.dammer@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
SQLAlchemy = "^1.4.5"
alembic = "^1.5.8"
pydantic = {extras = ["email"], version = "^1.8.1"}
python-dotenv = "^0.17.0"
asyncpg = "^0.22.0"
Hypercorn = "^0.11.2"
passlib = "^1.7.4"
python-multipart = "^0.0.5"
argon2-cffi = "^20.1.0"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]
pre-commit = "^2.12.1"
pytest = "^6.2.3"
black = "^21.4b2"
flake8 = "^3.9.1"
mypy = "^0.812"
requests = "^2.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
