[tool.poetry]
name = "TrackMeCore"
version = "0.1.0"
description = "base functionality for personal data collection and initial analysis"
authors = ["alisa <alisa.dammer@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
fastapi = "^0.70.1"
SQLAlchemy = "^1.4.28"
alembic = "^1.7.5"
pydantic = {extras = ["email"], version = "^1.8.2"}
python-dotenv = "^0.19.2"
asyncpg = "^0.25.0"
Hypercorn = "^0.13.1"
passlib = "^1.7.4"
python-multipart = "^0.0.5"
argon2-cffi = "^21.3.0"
psycopg2-binary = "^2.9.2"
statsmodels = "^0.13.1"
numpy = "^1.21.4"

[tool.poetry.dev-dependencies]
matplotlib = "^3.5.0"
pre-commit = "^2.12.1"
pytest = "^6.2.3"
black = "^21.4b2"
flake8 = "^3.9.1"
mypy = "^0.812"
requests = "^2.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
